# fast_xbrl_parser

./: .gitignore  Cargo.toml  Settings.toml  environment.yml  pyproject.toml  readme.md  test_json.ipynb  test_package.ipynb
.github/workflows/: compile - Copy.yml  compile-python.yml  compile.yml  compile2.yml  compile_command_line.yml  python - Linux.yml
examples/: example.ipynb  gme-20211030_htm.xml  test_package.ipynb
python-bindings/: Cargo.toml
python-bindings/src/: lib.rs
src/: build.rs  helpers.rs  io.rs  lib.rs  main.rs  parser.rs
tests/: integration.ipynb  integration.py
