[package]
name = "fast_xbrl_parser"
version = "0.2.1"
edition = "2021"

[lib]
name = "fast_xbrl_parser"
crate-type = ["cdylib"]

[dependencies]
roxmltree = "*"
regex = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
clap = { version = "3.0.0-beta.5", features = ["derive"] }
reqwest = { version = "*" , features = ["blocking"] }
pyo3 = { version = "0.15.1", features = ["extension-module"] }
pythonize = "*"
csv = "*"
scraper = "*"

[build-dependencies]
pyo3-build-config = "*"