[package]
name = "fast_xbrl_parser"
version = "0.2.2"
edition = "2021"

[workspace]
members = ["python-bindings"]


[dependencies]
roxmltree = "*"
regex = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
clap = { version = "3.0.0-beta.5", features = ["derive"] }
reqwest = { version = "*" , features = ["blocking"] }
csv = "*"
scraper = "*"